# sample-python

./: .gitignore  LICENSE  README.md  catalog-info.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/sample_python_app/: __init__.py  __main__.py  app.py
tests/: test_app.py
