[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-python-app"
version = "0.1.0"
description = "A minimal sample Python application for publishing to a remote repository"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["sample", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
sample-app = "sample_python_app.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/sample-python-app"
Repository = "https://github.com/your-org/sample-python-app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
